# liberflow

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BITRIX24_INTEGRATION.md  CHANGELOG.md  DECISIONS.md  PROJECT_STATE.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  TESTING.md  manage.py  pyproject.toml
apps/: __init__.py
apps/common/: __init__.py  apps.py  urls.py  views.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py
docs/: README.md
tests/: __init__.py  test_health.py
