[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "liberflow"
version = "0.1.0"
description = "Internal project and development management system for LiberCode"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.11,<5.0",
    "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
